# habilitacion-llm

./: .doignore  .gitignore  DEPLOYMENT_PLAN.md  README.md  SETUP_INSTRUCTIONS.md  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  __init__.py  config.env  env.example  requirements.txt
backend/api/: __init__.py  main.py
backend/api/endpoints/: agent_endpoints.py
backend/api/models/: user_agent.py
backend/api/services/: gradient_service.py  user_agent_service.py
backend/config/: settings.py
scripts/: create_repo_and_deploy.sh  deploy.sh  setup_repo.sh  start_dev.sh  test_api.py  test_deployment.sh  update_token_limits.sh  verify_token_limits.sh
